# EdgeVision

./: README.md  benchmark_results.csv  inference.py  model_benchmark.py  plate_log.csv
FaceID/: .gitignore  README.md  embeddings_buffalo_l.pkl  embeddings_buffalo_s.pkl  faceeid.py  main.py  pyproject.toml  rpi_faceid_multithreaded.py  try.py
PiLPR/: benchmark_results.csv  plate_log.csv
PiLPR/pruned_ncnn_model/: model_ncnn.py
pruned_ncnn_model/: metadata.yaml  model.ncnn.param
