[project]
name = "faceid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "insightface>=0.7.3",
    "numpy>=2.3.5",
    "onnxruntime-gpu>=1.23.2",
    "opencv-contrib-python>=4.11.0.86",
    "scikit-learn>=1.8.0",
]
